Fix style when file name too long.

--- a/src/App.scss
+++ b/src/App.scss
@@ -40,6 +40,9 @@
 }
 
 .file-name {
+  white-space: pre;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .file-content {
